static/assets/css/custom.css
/* Primary Color, from application.css */

a,
code,
.quire-menu__inner__header .quire-title,
.quire-menu__inner__links button,
.quire-cover__inner__title,
.quire-page__header__title,
.quire-page__section-list__link button {
  color: #9eb300;
}
a:active, a:focus, a:hover {
  color: shade(#9eb300, 25%);
}

.quire-nav svg,
.quire-menu__button svg,
.quire-search svg,
.quire-page__section-list__link svg {
  fill: #9eb300;
}

/* Primary Color, from overrides */

.quire-cover__text__title {
  color: #c4d544;
}

.quire-cover__footer {
  background-color: #ecebf5;
}

/* Citations */

.quire-citation {
  display: inline;
  text-align: inherit;
  box-sizing: inherit;
  border-width: 0;
  background-color: #eaeaea;
  padding-left: .25em;
  padding-right: .25em;
  border-radius: .25em;
  font-size: .8em;
  font-weight: 400;
  color: #727272;
  cursor: pointer;
  white-space: nowrap;
}

.quire-citation-content {
  display: none;
  position: absolute;
  margin-left: 1em;
  margin-top: 1em;
  font-size: .8em;
  line-height: 1.5;
  background-color: #eee;
  border-radius: 10px;
  padding: 1em;
  max-width: 30em;
  text-indent: 0;
}

.quire-citation-content__no-css {
  display: none;
}

.quire-citation:hover + .quire-citation-content,
.quire-citation:focus + .quire-citation-content {
  display: block;
}

/* Cover */

.quire-body.quire-body-type--cover .quire-nav-group {
  background-color: #000;
}
.quire-cover__background {
  justify-content: center;
}
.quire-cover__inner {
  margin-top: 30vh;
  text-align: right;
}
.quire-cover__inner__subtitle {
  font-size: 8vh;
  line-height: 9vh;
  font-weight: 700;
}
.quire-cover__inner__contributor {
  font-size: 3.2vh;
  font-weight: 400;
  color: #cbc9e4;
  margin-top: 0;
}

/* Menu -- Dark Style */

.quire-menu__background {
  background-color: #727272;
}

.quire-menu__inner .quire-title__contributors {
  color: #313131;
}

.quire-menu__inner__footer {
  color: #ffffff;
}

.quire-menu__inner__footer a {
  color: #ffffff;
  text-decoration: underline;
  text-decoration-skip: ink;
}

.quire-menu__inner a,
.quire-menu__inner__header .quire-title,
.quire-menu__inner__header .quire-title a,
.quire-menu__inner button {
  color: #eaeaea;
}

/* Contributors list */


#contributors .q-contributors__list .q-contributors__list__item#reinhard-bek {
  margin-bottom: 4rem;
}

#contributors .q-contributors__list .q-contributors__list__item#timothy-p\.-whalen {
  display: none;
}

/* Symposium Participants list */

#participants ul {
  list-style-type: none;
  margin-left: 0;
  padding-left: 0;
}

#participants ul li {
  margin-bottom: 1rem;
}

#participants ul li p {
  margin-bottom: 0;
}

.quire-page__content__main blockquote > p {
  margin-bottom: .5rem;
}

br.pdf-toc {
  display: none;
}

/* Print */

@media print {

  a {
    color: cmyk(0,0,0,1);
  }

  .quire-body.quire-body-type--cover .quire-nav-group {
    background-color: transparent;
  }

  .quire-body.quire-body-type--cover .quire-nav-group a {
    color: #9eb300;
  }
  .quire-body-type--cover .quire-cover__inner__title {
    width: auto;
  }
  .quire-cover__inner__series {
    background-color: transparent;
    color: cmyk(0,0,0,0.55);
    letter-spacing: 2pt;
  }
  .quire-body-type--cover .quire-cover__inner__title {
    font-size: 36pt;
    line-height: 46pt;
  }
  .quire-body-type--cover .quire-cover__inner__contributor {
    color: cmyk(0,0,0,1);
    font-size: 18pt;
    line-height: 24pt;
  }
  .quire-body-type--cover .quire-cover__inner__publisher {
    color: cmyk(0,0,0,0.55);
    font-size: 15pt;
    line-height: 24pt;
    margin-top: 4in;
  }

  /*Start main page numbering at Opening Remarks*/
  .quire-body#opening-remarks {
    counter-reset: page 1;
  }

  #contents br.pdf-toc {
    display: inherit;
  }

  .quire-page__content__main h3 {
    margin-bottom: 6pt;
  }

  .quire-body-type--section-head .quire-page {
    background-color: #9eb300;
  }
  .quire-citation {
    background-color: transparent;
    padding-left: 0;
    padding-right: 0;
    border-radius: 0;
    font-size: inherit;
    font-weight: inherit;
    color: inherit;
    white-space: normal;
  }
  #videos .quire-page__content__main h2 {
    column-span: all;
    width: 100%;
    clear: both;
  }
  #videos .q-figure-grid {
    page-break-inside: inherit;
    break-inside: inherit;
  }
  #videos .q-figure__inner-figure {
    page-break-inside: avoid;
    break-inside: avoid;
    margin-bottom: 1em;
  }
  #videos h2:nth-of-type(2) {
    page-break-before: always;
  }
  #fig-1-9,
  #fig-2-4,
  #fig-3-2,
  #fig-13-8,
  #fig-15-3,
  #fig-21-1 {
    page-break-after: always;
  }
  #fig-13-7,
  #fig-13-8,
  #videos .q-figure.q-figure-grid .q-figure__inner-figure.q-grid-2 {
    width: 48.4%;
  }
  #fig-15-1,
  #fig-20-1 {
    width: 70%;
  }
  #fig-7-3,
  #fig-7-4 {
    width: 80%;
  }
}

